Test body sites pcoa

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -382,7 +382,15 @@
             'button_text': "{{ _('Microbiomes Across the Lifespan') }}",
             'img_div_id': 'pcoa-multipopulation-lifestage',
             'img_id': 'pcoa-multipopulation-lifestage-img',
-            'description': "<p>{{ _('One major factor associated with gut microbiomes is the age of the individual, represented in this map by life stages.<br /><br />Interestingly, compared to differences among adults living in different areas of the world, infants are relatively similar microbially regardless of where they were born. But, as individuals age, their microbiomes reflect greater geographical or lifestyle differences.') }}</p>"}
+            'description': "<p>{{ _('One major factor associated with gut microbiomes is the age of the individual, represented in this map by life stages.<br /><br />Interestingly, compared to differences among adults living in different areas of the world, infants are relatively similar microbially regardless of where they were born. But, as individuals age, their microbiomes reflect greater geographical or lifestyle differences.') }}</p>"},
+        'tmi_WGS_skin_all_samples': {
+            'dataset': 'tmi-WGS-allsamples',
+            'category': 'microbial_map',
+            'accordion_div_id': 'microbiome-map-all-tmi-accordion',
+            'button_text': "{{ _('Microbiomes Across the Body') }}",
+            'img_div_id': 'pcoa-tmi-all-samples',
+            'img_id': 'pcoa-tmi-all-samples-img',
+            'description': "<p>{{ _('In this map, we\'ve placed your sample relative to all the other samples we have in Microsetta. As you can see, there are a few different types of samples people have contributed, and the microbial configurations present can be VERY different.') }}</p>"}
     };
 
     function getMicrobiomeMapsRasterizedPlots(state) {
@@ -393,7 +401,11 @@
                 var pcoa_plots = ['tmi_16S_gut_all_samples', 'tmi_16S_gut_multipop', 'tmi_16S_gut_lifestage', 'tmi_16S_gut_builtenv'];
             }
         } else {
-            var pcoa_plots = [];
+            if(state.dataset_type.value === 'WGS') {
+                var pcoa_plots = ['tmi_WGS_skin_all_samples'];
+            } else {
+                var pcoa_plots = [];
+            }
         }
         
         for (var key of pcoa_plots) {
