Fix neighbors and grammatical tweaks

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1698,7 +1698,7 @@
                               <img class="diversity-icon" src='/static/img/probiotics.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              {{ _('<span id="beta_diversity_probiotics_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours <span id="beta_diversity_probiotics_response" class="info-loader text-success">...</span> take probiotics') }}
+                              {{ _('<span id="beta_diversity_probiotics_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours take probiotics <span id="beta_diversity_probiotics_response" class="info-loader text-success">...</span>') }}
                           </div>
                       </div>
                       <div class="col diversity-compare">
@@ -1746,7 +1746,7 @@
                               <img class="diversity-icon" src='/static/img/age.png'>
                           </div>
                           <div class="col-sm-8 diversity-text">
-                              {{ _('<span id="beta_diversity_age_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours were the same age as you') }}
+                              {{ _('<span id="beta_diversity_age_value" class="info-loader font-weight-bold">...</span> of people with a microbiome like yours were a similar age as you') }}
                           </div>
                       </div>
                       <div class="col diversity-compare">
